@@ -2,45 +2,48 @@ package com.avighna.Server;
 
 import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
-
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
+import java.io.InputStream;
 
 public class FrontServerHandler implements HttpHandler {
-    @Override
-    public void handle(HttpExchange exchange) throws IOException  {
-        String path = exchange.getRequestURI().getPath();
+  @Override
+  public void handle(HttpExchange exchange) throws IOException {
+    String path = exchange.getRequestURI().getPath();
 
-        if(path.equals("/") || path.equals("/index.html")){
-            serveTheFile("index.html", exchange);
-        } else if (path.equals("/move.js")) {
-            serveTheFile("move.js", exchange);
-        } else if (path.equals("/style.css")) {
-            serveTheFile("style.css", exchange);
-        }
+    switch (path) {
+      case "/", "/index.html" -> serveTheFile("index.html", exchange);
+      case "/move.js" -> serveTheFile("move.js", exchange);
+      case "/style.css" -> serveTheFile("style.css", exchange);
+    }
+  }
 
+  private void serveTheFile(String fileName, HttpExchange exchange) throws IOException {
+    String theExtension = getTheExtension(fileName);
 
+    // Load file from classpath resources
+    InputStream inputStream = getClass().getClassLoader().getResourceAsStream("static/" + fileName);
+
+    if (inputStream == null) {
+      // Send 404 if file not found
+      String notFound = "File not found: " + fileName;
+      exchange.sendResponseHeaders(404, notFound.length());
+      exchange.getResponseBody().write(notFound.getBytes());
+      exchange.getResponseBody().close();
+      return;
     }
 
-    private void serveTheFile(String lastTwo, HttpExchange exchange) throws IOException {
-        String theExtenstion = getTheExtension(lastTwo);
-        File file = new File("/Users/avipatel/IdeaProjects/Chess_d/src/main/java/com/avighna/FrontEnd/" + lastTwo);
-        byte[] theBytesToLoad = Files.readAllBytes(file.toPath());
-        exchange.getResponseHeaders().set("Content-Type", "text/" + theExtenstion); //the Content type of the file will be the extension thing yk
-        exchange.sendResponseHeaders(200, theBytesToLoad.length); // OK code and send the header over
-        exchange.getResponseBody().write(theBytesToLoad); // write the file to the body of the response of the server when u connect waht is the stuff gon respond with
-        exchange.getResponseBody().close();
-    }
+    byte[] theBytesToLoad = inputStream.readAllBytes();
+    inputStream.close();
 
-    private String getTheExtension(String lastTwo){
-        int index = lastTwo.indexOf('.');
-        String theExtenstion = lastTwo.substring(index + 1);
+    exchange.getResponseHeaders().set("Content-Type", "text/" + theExtension);
+    exchange.sendResponseHeaders(200, theBytesToLoad.length);
+    exchange.getResponseBody().write(theBytesToLoad);
+    exchange.getResponseBody().close();
+  }
 
-        return theExtenstion;
-    }
-
-
-
-
+  private String getTheExtension(String fileName) {
+    int index = fileName.indexOf('.');
+    String theExtension = fileName.substring(index + 1);
+    return theExtension;
+  }
 }
